2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add some cross-compilation tests.
	* tests/testsuite.at: Here.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a check for Boost.Graph.
	* build-aux/boost.m4 (BOOST_GRAPH): New.
	* tests/testsuite.at: Test the new macro.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add macros for Boost.Foreach and Boost.Threads.
	* build-aux/boost.m4 (BOOST_FOREACH, BOOST_THREADS): New.
	* tests/testsuite.at: Test the new macros.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Fix distcheck.
	* configure.ac: Use AC_CONFIG_HEADERS.
	* tests/Makefile.am (CLEANFILES): New.
	Make package.m4 depend on Makefile.in.  Disable installcheck-local.

2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add macros to check for Boost libraries and headers.
	* build-aux/boost.m4 (BOOST_REQUIRE): Restrain variable names to the
	pseudo /_?boost/i namespace.  Look up the version string of Boost in
	boost/version.hpp.
	(BOOST_FIND_HEADER, BOOST_FIND_LIB): New.

2007-10-31  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a testsuite.
	* Makefile.am (SUBDIRS): New.
	* configure.ac: Adjust for the testsuite.
	* tests/Makefile.am: New.
	* tests/atlocal.in: Copy from Makefile.am.
	* tests/testsuite.at: New.

2007-10-31  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Initial version.
	* ChangeLog: New.
	* Makefile.am: New.
	* bootstrap: New.
	* build-aux/boost.m4: New.
	(BOOST_REQUIRE): New.
	* configure.ac: New.
