@@ -248,5 +248,6 @@ AT_CHECK_MACRO([BOOST_FOREACH])
 
 AT_BANNER([Boost libraries])
 
+AT_CHECK_MACRO([BOOST_FILESYSTEM])
 AT_CHECK_MACRO([BOOST_GRAPH])
 AT_CHECK_MACRO_CROSS([BOOST_THREADS])
